# marmalade

./: Cargo.toml
.github/workflows/: build.yaml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
