[package]
name = "marmalade-ui"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
yew = { version = "0.20", features = ["csr"] }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.4"
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
web-sys = "0.3"
js-sys = "0.3"

[workspace]
members = ["src-tauri"]
